# opengl-sandbox

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  NewShader.cpp  NewShader.h  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  glad.vcxproj  glad.vcxproj.filters  learn_opengl.sln  learn_opengl.vcxproj  learn_opengl.vcxproj.filters  stb_image.vcxproj  stb_image.vcxproj.filters
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
src/: Game.cpp  Log.cpp  Log.h  NewShader.cpp  NewShader.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Window.cpp  Window.h  main.cpp  util.cpp  util.h
src/engine/: Application.cpp  Application.h  Core.h  Game.cpp  Game.h  Input.cpp  Input.h  KeyCode.h  MouseCode.h
src/engine/entity/: Entity.cpp  Entity.h
src/engine/event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/engine/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/engine/imgui/: ImGuiLayer.cpp  ImGuiLayer.h
src/engine/input/: Input.cpp  Input.h  KeyCode.h  KeyCodes.h  MouseCode.h  MouseCodes.h
src/engine/layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
src/engine/resource/: Loadable.h  ResourceHandle.cpp  ResourceHandle.h  ResourceManager.cpp  ResourceManager.h
src/game/: Game.cpp  Game.h
src/graphics/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  TextureManager.h  UniformBuffer.cpp  UniformBuffer.h  Window.cpp  Window.h
src/shaders/: direct_transform.vert  lighted_textured_model.frag  lighted_textured_model.vert  lightmap_textured_model.frag  lightmap_textured_model.vert  single_color.frag  single_color.fragmentshader  skybox.frag  skybox.vert  textured_model.frag  textured_model.vert
src/util/: Loader.cpp  Loader.h  Log.cpp  Log.h  MovingAverage.cpp  MovingAverage.h  SimpleTimer.cpp  SimpleTimer.h  util.cpp  util.h
